removed whitespace, increased line height for code, fixed feature content.

--- a/src/resources/less/main.less
+++ b/src/resources/less/main.less
@@ -908,13 +908,15 @@ header[role=banner] {
                         -webkit-transition: height 500ms ease;
                 }
                 .expanded {
-                    height: 350px !important;
+                    height: 450px !important;
                 }
 
                 div{
                     background-color: white;
-                    padding-top: 20px;
                     margin-bottom: 20px;
+                    >h3 {
+                        padding-top: 20px;
+                    }
                     h3  {
                         text-align: center;
                     }
@@ -925,6 +927,7 @@ header[role=banner] {
                         .font-size(1.3);
                         color: black;
                         font-family: "Courier New";
+                        line-height:  18px;
 
                         .prompt {
                             color: #008080
